chore: apply local stashed changes and resolve conflicts by taking stashed versions; sync local state

--- a/templates/therapists.html
+++ b/templates/therapists.html
@@ -387,6 +387,6 @@
     </nav>
     {% endif %}
   </div>
-  {% include "partials/profile_modal.html" %}
+  {% include "partials/profile/profile_display.html" %}
 </section>
 {% endblock %}
